--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.06 2013-03-25
+        - Improved documentation.
+	- Improved content handling in example app.
+	- Fixed bug in using "values" with a dereferenced array.
+	- Fixed prototype bug.
+
 0.05 2013-03-23
         - Fixed a bug in the subscription process
 	  of the example app.
