Import of AKRON/Mojolicious-Plugin-PubSubHubbub-0.07 from CPAN.
gitpan-cpan-distribution: Mojolicious-Plugin-PubSubHubbub
gitpan-cpan-version:      0.07
gitpan-cpan-path:         AKRON/Mojolicious-Plugin-PubSubHubbub-0.07.tar.gz
gitpan-cpan-author:       AKRON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.07 2013-03-31
+        - Bug fixes from development versions.
+
 0.06 2013-03-29
         - Improved documentation.
 	- Improved content handling in example app.
