--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.08 2013-04-19
+        - Improved documentation.
+	- Updated dependencies.
+
 0.07 2013-03-31
         - Bug fixes from development versions.
 
