Import of AKRON/Mojolicious-Plugin-PubSubHubbub-0.09 from CPAN.
gitpan-cpan-distribution: Mojolicious-Plugin-PubSubHubbub
gitpan-cpan-version:      0.09
gitpan-cpan-path:         AKRON/Mojolicious-Plugin-PubSubHubbub-0.09.tar.gz
gitpan-cpan-author:       AKRON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
-0.08 2013-04-19
+0.09 2013-05-20
+        - Fixed for Mojolicious 4.0 compatibility.
+
+0.08 2013-04-09
         - Improved documentation.
-	- Updated dependencies.
 
 0.07 2013-03-31
         - Bug fixes from development versions.
