--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.11 2014-05-29
+        - Cleanup.
+	- Fixed License issue (now coherent Artistic License 2.0).
+
 0.10 2013-08-03
         - Update to Mojolicious 4.23.
 
