Import of AKRON/Mojolicious-Plugin-PubSubHubbub-0.13 from CPAN.
gitpan-cpan-distribution: Mojolicious-Plugin-PubSubHubbub
gitpan-cpan-version:      0.13
gitpan-cpan-path:         AKRON/Mojolicious-Plugin-PubSubHubbub-0.13.tar.gz
gitpan-cpan-author:       AKRON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
+0.13 2014-10-17
+        - Updated to Mojolicious 5.49.
+	- Fixed test suite for new every_param() method.
+
 0.12 2014-05-31
-        - Compatibility fix for link headers.
+        - Compatibility fix for link headers in Mojo versions > 4.99.
 
 0.11 2014-05-29
         - Cleanup.
